# HPC

MonteCarloMethod/: CMakeLists.txt
MonteCarloMethod/inc/: Master.h  Worker.h  geometry.h
MonteCarloMethod/src/: Master.c  Worker.c  main.c  main.cpp
PoissonEquation/: .gitignore  CMakeLists.txt  bluegen_compile.sh  clean.sh  polus_compile.sh  submit.sh
PoissonEquation/inc/: GPUSolver.hpp  ISolver.hpp  Interactor.hpp  MultiThreadSolver.hpp  ParallelSolver.hpp  SerialSolver.hpp  deviceFunctions.hpp  functions.hpp  macros.hpp
PoissonEquation/src/: GPUSolver.cpp  GPUSolver.cu  GPUSolverMock.cpp  Interactor.cpp  MultiThreadSolver.cpp  ParallelSolver.cpp  SerialSolver.cpp  main.cpp
